<resources>
    <string name="app_name">北师小鸦</string>

    <string name="preference_key">cn.xuhongxu.xiaoya.PREFERENCE_KEY</string>
    <string name="gateway_preference_key">cn.xuhongxu.xiaoya.GATEWAY_PREFERENCE_KEY</string>

    <string name="navigation_drawer_open">打开导航抽屉</string>
    <string name="navigation_drawer_close">关闭导航抽屉</string>

    <string name="action_settings">设置</string>
    <string name="action_refresh">刷新</string>
    <string name="action_copy">复制</string>

    <!-- Tip -->
    <string name="copied_to_clipboard">已复制到剪贴板</string>
    <string name="succeed_login">成功!</string>
    <string name="please_login_first">请先登录</string>
    <string name="network_error">网络错误, 请尝试重新登录</string>
    <string name="login_timeout">登录过期, 请尝试重新登录</string>
    <string name="select_evaluation_turn">请选择评教轮次</string>
    <string name="select_evaluation_course">请选择评教课程</string>
    <string name="do_not_show_again">不再显示</string>
    <string name="updated">已更新</string>
    <string name="error_title">错误提示</string>
    <string name="succeed_evaluate">成功评教</string>

    <!-- Login Activity -->
    <string name="title_activity_login">京师统一身份认证</string>
    <string name="username">请输入学号</string>
    <string name="password">请输入密码</string>
    <string name="remember_me">记住我</string>
    <string name="login">登录</string>
    <string name="logo_desp">LOGO</string>
    <string name="login_tip">京师统一身份认证平台登录</string>

    <!-- Main Activity -->
    <string name="avatar_desp">Avatar</string>

    <!-- Navi Drawer -->
    <string name="Settings">设置</string>
    <string name="logout">注销</string>
    <string name="Home">主页</string>
    <string name="Select">选课</string>
    <string name="Test">考试</string>
    <string name="Score">成绩</string>
    <string name="Evaluate">评教</string>

    <!-- List Label Caption -->
    <string name="school_year">学年</string>
    <string name="school_term">学期</string>
    <string name="start_date">起始日期</string>
    <string name="end_date">结束日期</string>
    <string name="title_evaluating_courses">评教课程列表</string>
    <string name="credit">学分</string>
    <string name="status">状态</string>

    <!-- Evaluate Dialog -->
    <string name="evaluating">评教中…</string>
    <string name="choose_evaluation_level">评分</string>
    <string name="choose_all_evaluation_level">一键评分</string>
    <string name="evaluate_tip">请选择课程客观评教\n小鸦会自动生成文字评价</string>
    <string name="action_evaluate_all">一键评教</string>

    <!-- Home -->
    <string name="donate_me">捐赠我</string>
    <string name="welcome_to_use">欢迎使用北师小鸦!</string>

    <!-- Exam -->
    <string name="select_exam_round">请选择考试轮次</string>
    <string name="type">类型</string>
    <string name="seatNumber">座号</string>
    <string name="location">地点</string>
    <string name="time">时间</string>
    <string name="ended">[已结束] </string>
    <string name="testing">[考试中] </string>
    <string name="current_test">点击选择考次</string>
    <string name="usual_score">平时分</string>
    <string name="exam_score">期末分</string>
    <string name="choose_term">选择学期</string>
    <string name="spring_term">春季学期</string>
    <string name="fall_term">秋季学期</string>
    <string name="encryptedMsg">AHFEKIFjn8r932yrhfjsvla32=-324!efzi32321@#E</string>
    <string name="register_err">注册用户失败</string>
    <string name="encrypt_error">加密失败</string>
    <string name="push_title">小鸦推送</string>
    <string name="title_activity_timetable">小鸦课程表</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="login_error">登录错误</string>
    <string name="write_error">存储课程表错误</string>
    <string name="please_import_timetable">请导入课程表</string>
    <string name="action_list_week">周数列表</string>
    <string name="action_set_current">设为当前周</string>
    <string name="action_import">导入课表</string>
    <string name="choose_week">选择周数</string>
    <string name="shown_week">当前显示</string>
    <string name="prefix_week">第</string>
    <string name="suffix_week">周</string>
    <string name="is_current">(当前)</string>
    <string name="all">全部</string>
    <string name="action_gpa">计算GPA</string>
    <string name="standard_GPA">四分制标准GPA</string>
    <string name="four_GPA">四分制等级GPA</string>
    <string name="average_GPA">百分制GPA</string>
    <string name="all_course">全部成绩</string>
    <string name="failed_count">不及格科目数</string>
    <string name="good_count">优秀科目数</string>
    <string name="out_count">满分科目数</string>
    <string name="professional_course">专业课程</string>
    <string name="score_statistics">成绩统计</string>
    <string name="share">分享</string>
    <string name="import_timetable">导入课程表</string>
    <string name="cancel">取消</string>
    <string name="action_share">分享</string>
    <string name="share_timetable">分享课程表</string>
    <string name="share_error">分享失败</string>
    <string name="this_is_timetable_share_code">这是课程表分享码，可以复制全文（包括这些）通过小鸦课程表导入</string>
    <string name="import_error">导入失败</string>
    <string name="ok">确定</string>
    <string name="title_activity_toolbox">小鸦工具箱</string>
    <string name="gateway_login_tip">网关登录</string>
    <string name="force_logout">强制离线</string>
    <string name="building">建设中……</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="period">学时</string>
    <string name="select_plan_course">请选择计划课程以查看所有班次</string>
    <string name="plan_course">计划课程</string>
    <string name="elective_course">公选课</string>
    <string name="select_result">选课结果</string>
    <string name="cancel_course">退课</string>
    <string name="teacher">教师</string>
    <string name="chosen">已选中</string>
    <string name="remaining_selection">可选人数</string>
    <string name="selected_count">已选/免听/上限</string>
    <string name="class_id">班号</string>
    <string name="select_confirm">确定选择</string>
    <string name="confirm">确定</string>
    <string name="selecting">选课中…</string>
    <string name="succeed_select">选课成功</string>
    <string name="time_location">时间地点</string>
    <string name="canceling">退选中……</string>
    <string name="cancel_confirm">确定退选</string>
    <string name="action_feedback">用户反馈</string>
    <string name="action_about">关于</string>
    <string name="about">许宏旭\n\n2014级本科生\n信息科学与技术学院\n北京师范大学</string>
    <string name="contact_me">联系我</string>
    <string name="action_import_history">导入历史分享</string>
    <string name="choose_history">选择历史分享码</string>
    <string name="import_success">导入成功！</string>
    <string name="delete_current">删除当前</string>
    <string name="delete_ok">删除成功</string>
    <string name="no_current">不存在当前项</string>
    <string name="is_shown">(显示)</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_view_text">没有课</string>
    <string name="title_activity_preferences">设置</string>

    <!-- Strings related to Settings -->
    <string name="pref_category_network">网络连接</string>
    <string name="pref_default_timeout">30000</string>
    <string name="pref_title_timeout">连接超时（ms）</string>
    <string name="pref_category_evaluation">评教内容</string>
    <string name="pref_title_star_5">很好</string>
    <string name="pref_title_star_4">好</string>
    <string name="pref_title_star_3">一般</string>
    <string name="pref_title_star_2">还行</string>
    <string name="pref_title_star_1">不太好</string>
    <string name="pref_default_star_1">不太好</string>
    <string name="pref_default_star_2">还行</string>
    <string name="pref_default_star_3">一般</string>
    <string name="pref_default_star_4">好</string>
    <string name="pref_default_star_5">很好</string>
    <string name="action_current">查看本学期</string>
    <string name="choose_exam_round">选择考试轮次（期末或随堂，无法确定对应关系）</string>
    <string name="feedback_message">请加QQ群\n\n北师小鸦尝鲜用户群 334180755</string>
    <string name="pref_category_general">基本设置</string>
    <string name="pref_show_avatar">显示头像</string>
    <string name="gateway">网关</string>
    <string name="search_library">搜索馆藏</string>
    <string name="library_book_keyword">藏书关键词</string>
    <string name="classroom">自习室</string>
    <string name="query">查询</string>
    <string name="minor">辅修</string>
    <string name="renew_all">全部续约</string>
    <string name="borrow_book">借阅管理</string>
    <string name="library_key">cn.xuhongxu.xiaoya.LIBRARY</string>
    <string name="account_setting">设置账号</string>
    <string name="exercise_query">锻炼打卡</string>
    <string name="enter_time">进入时间</string>
    <string name="leave_time">离开时间</string>
    <string name="pass_record">显示合格记录</string>
    <string name="has_class">课程时间冲突</string>
    <string name="class_details">课程明细</string>
    <string name="delete_course">删除课程</string>
    <string name="import_outdated">课表已过期，请让TA重新分享</string>
    <string name="morning">上午</string>
    <string name="afternoon">下午</string>
    <string name="evening">晚上</string>
    <string name="checkin">签到</string>
    <string name="leave">暂离</string>
    <string name="stopseat">结束使用</string>
    <string name="cancel_seat">取消预约</string>
    <string name="receipt">凭证号</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="is_checkedin">是否签到</string>
    <string name="date">日期</string>
    <string name="login_library">登录图书馆</string>
    <string name="library_seat">座位预约查看</string>
    <string name="refresh">刷新</string>
    <string name="choose_seat">选座</string>
    <string name="position">位置</string>
    <string name="room">房间</string>
    <string name="tip">提示</string>
    <string name="cancel_reservation">取消预约</string>
    <string name="alipay">点此【支付宝】捐赠</string>
    <string name="tomorrow">明天</string>

</resources>
