<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_select"
            android:icon="@drawable/ic_check_circle_black"
            android:title="@string/Select" />
        <item
            android:id="@+id/nav_test"
            android:icon="@drawable/ic_school_black"
            android:title="@string/Test" />
        <item
            android:id="@+id/nav_score"
            android:icon="@drawable/ic_assessment_black"
            android:title="@string/Score" />
    </group>

    <item android:title="@string/Settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black"
                android:title="@string/Settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
