<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_set_current"
        android:icon="@drawable/ic_stars_white"
        android:title="@string/action_set_current"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_import"
        android:icon="@drawable/ic_add_white"
        app:showAsAction="always"
        android:title="@string/action_import" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_import_history"
        android:title="@string/action_import_history"
        app:showAsAction="never" />
</menu>
