<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.xuhongxu.xiaoya.Fragment.LibrarySeatFragment">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:columnCount="4"
        android:rowCount="3">

        <TextView
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_margin="4dp"
            android:layout_row="0"
            android:text="@string/receipt" />

        <TextView
            android:id="@+id/receipt"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:layout_margin="4dp"
            android:layout_row="0" />

        <TextView
            android:layout_column="0"
            android:layout_margin="4dp"
            android:layout_row="1"
            android:text="@string/start_time" />

        <TextView
            android:id="@+id/startTime"
            android:layout_column="1"
            android:layout_margin="4dp"
            android:layout_row="1" />

        <TextView
            android:layout_column="2"
            android:layout_margin="4dp"
            android:layout_row="1"
            android:text="@string/end_time" />

        <TextView
            android:id="@+id/endTime"
            android:layout_column="3"
            android:layout_margin="4dp"
            android:layout_row="1" />

        <TextView
            android:layout_column="0"
            android:layout_margin="4dp"
            android:layout_row="2"
            android:text="@string/date" />

        <TextView
            android:id="@+id/date"
            android:layout_column="1"
            android:layout_margin="4dp"
            android:layout_row="2" />

        <TextView
            android:layout_column="2"
            android:layout_margin="4dp"
            android:layout_row="2"
            android:text="@string/status" />

        <TextView
            android:id="@+id/status"
            android:layout_column="3"
            android:layout_margin="4dp"
            android:layout_row="2" />

    </GridLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gridLayout"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/refresh_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh" />

            <Button
                android:id="@+id/choose_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_seat" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_seat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/checkin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkin" />

            <Button
                android:id="@+id/leave_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leave" />

            <Button
                android:id="@+id/stop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stopseat" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/buttons"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:scrollbars="vertical" />

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
