<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cn.xuhongxu.xiaoya.Activity.GatewayActivity"
    tools:showIn="@layout/activity_gateway">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="260sp"
        android:layout_height="64sp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="24sp"
        android:layout_marginTop="24sp"
        android:contentDescription="@string/logo_desp"
        android:scaleType="fitXY"
        android:src="@mipmap/login_logo" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/login_logo"
        android:layout_marginBottom="12sp"
        android:layout_marginStart="12sp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/login_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/login_title"
        android:layout_marginBottom="20sp"
        android:layout_marginStart="12sp"
        android:text="@string/gateway_login_tip" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/login_tip">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_username"
            android:ems="20"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:inputType="textAutoComplete" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/edit_username_layout">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_username_layout"
            android:ems="20"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Switch
        android:id="@+id/switch_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/edit_password_layout"
        android:layout_marginTop="16sp"
        android:checked="false"
        android:text="@string/remember_me"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/info"
        android:padding="8dp"
        android:layout_below="@id/switch_remember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login_button"
        android:layout_below="@id/info"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_below="@id/login_button"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/logout_button"
            android:text="@string/logout"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/force_button"
            android:text="@string/force_logout"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>


</RelativeLayout>
