<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cn.xuhongxu.xiaoya.Activity.GatewayActivity"
    tools:showIn="@layout/activity_gateway">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="260sp"
        android:layout_height="64sp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="24sp"
        android:layout_marginTop="24sp"
        android:contentDescription="@string/logo_desp"
        android:scaleType="fitXY"
        android:src="@mipmap/login_logo" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/login_logo"
        android:layout_marginBottom="12sp"
        android:layout_marginStart="12sp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/login_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/login_title"
        android:layout_marginBottom="20sp"
        android:layout_marginStart="12sp"
        android:text="@string/gateway_login_tip" />

    <TextView
        android:id="@+id/info"
        android:layout_below="@id/login_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/logout_button"
        android:layout_below="@id/info"
        android:text="@string/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
